@@ -1,3 +1,8 @@
+2010-03-18  Levi Bard  <levi@unity3d.com>
+
+	* Gui/DataProvider.cs: 
+	* Gui/CTextEditorExtension.cs: Track API changes.
+
 2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* CBinding.csproj: Remove import off mono.addins targets.
